Rework maven poms, dependencies, and version management